# train-ranking

./: .gitignore  Dockerfile  README.md  compose.yml  cron.sh  cron_init.sh  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  train_data.csv
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  container-image.yml
rail_rank/: __init__.py  about.py  data.py  rankings.py
rail_rank/static/: base.css  burger.js
rail_rank/templates/: base.html
rail_rank/templates/about/: index.html
rail_rank/templates/rankings/: index.html
train_app/: __init__.py  cron.py  data.json  data.py  db.py  page.py  rankings.py  schema.sql  train_data_backup.csv
train_app/static/: base.css
train_app/templates/: base.html
train_app/templates/about/: index.html
train_app/templates/page/: index.html
train_app/templates/rankings/: index.html
