[build-system]
requires = [
    "flask >= 2.2.3",
    "pyspark >= 3.3.2",
    "stomp.py >= 8.1.0",
    "click >= 8.1.3",
    "pandas >= 1.5.3",
]

[options.extras_require]
dev = [
    "black >= 23.1.0",
    "mypy >= 1",
    "ruff >= 0.0.257",
    "ssort >= 0.11.6",
    "pandas-stubs >= 1.5.3",
    "types-Flask >= 1.1.6",
    "sqlfluff >= 2.0.1",
]

[tool.ruff]
select = [
    "E",
    "F",
    "I",
    "N",
    "D",
    "UP",
    "ANN",
    "S",
    "BLE",
    "B",
    "A",
    "C4",
    "DTZ",
    "EM",
    "ISC",
    "G",
    "PIE",
    "RET",
    "SIM",
    "TID",
    "TCH",
    "ARG",
    "PL",
    "TRY",
]
target-version = "py311"

[[tool.mypy.overrides]]
module = "stomp"
ignore_missing_imports = true

[tool.sqlfluff.core]
dialect = "sqlite"

[project]
name = "flask-spark_template"
requires-python = ">=3.11"